# ghtriage

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
docs/: PLAN.md
docs/plans/: 2026-02-27-initial-implementation.md  2026-03-01-status-command.md  2026-03-03-table-annotations.md
src/ghtriage/: __init__.py  annotations.py  cli.py  config.py  pipeline.py  query.py
tests/: test_annotations.py  test_cli.py  test_config.py  test_pipeline.py  test_query.py
