[project]
name = "ghtriage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ghtriage = "ghtriage:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
