[project]
name = "ghtriage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "dlt[duckdb]>=1.0,<2",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
ghtriage = "ghtriage:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "coverage",
  "pytest-cov",
]

## TOOLS

[tool.ruff]
line-length = 99
src = ["src/ghtriage/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["ghtriage"]
force-sort-within-sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=ghtriage --cov-report=term --cov-report=html --cov-report=xml --cov-append"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ghtriage"]
